# django-cnpjfield

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
cnpj_field/: validators.py
