[metadata]
name = django-cnpj-gabriel.guerra
version = 0.0.1
author = GABRIEL GUERRA
author_email = gabrielguerra@unigranrio.br
description = Validador de CNPJ para Django
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6